--- a/css/style.css
+++ b/css/style.css
@@ -284,4 +284,137 @@ body{
         flex-basis: 49%;
         background: #f7f7f7;
     }
+    .records-sec1 .nav {
+        --bs-nav-link-padding-x: 0;
+    }
 }
+
+/* cotact page css */
+* {
+    box-sizing: border-box;
+  }
+  
+  
+  .contact-wrapper {
+    margin: auto 0;
+  }
+  
+  .submit-btn {
+    float: left;
+  }
+  
+  .form-headline:after {
+    content: "";
+    display: block;
+    width: 10%;
+    padding-top: 10px;
+    border-bottom: 3px solid #ec1c24;
+  }
+  
+  .highlight-text {
+    color: #ec1c24;
+  }
+  
+  .hightlight-contact-info {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 1.5;
+  }
+  
+  .highlight-text-grey {
+    font-weight: 500;
+  }
+  
+  .email-info {
+      margin-top: 20px;
+  }
+  
+  ::-webkit-input-placeholder { /* Chrome */
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  .required-input {
+    color: black;
+  }
+  @media (min-width: 600px) {
+    .contain {
+      padding: 0;
+    }
+  }
+  .form-input:focus,
+  textarea:focus{
+    outline: 1.5px solid #ec1c24;
+  }
+  
+  .form-input,
+  textarea {
+    width: 100%;
+    border: 1px solid #bdbdbd;
+    border-radius: 5px;
+  }
+  
+  @media (min-width: 700px) {
+    .wrapper {
+      display: block;
+      grid-template-columns: 2fr 1fr;
+    }
+
+  }
+
+  
+  form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+  }
+  form label {
+    display: block;
+  }
+  form p {
+    margin: 0;
+  }
+  
+  .full-width {
+    grid-column: 1 / 3;
+  }
+  
+  button,
+  .submit-btn,
+  .form-input,
+  textarea {
+    padding: 1em;
+  }
+  
+  button, .submit-btn{
+    padding: 12px 30px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 10px;
+    background-color: #003777;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+button, .submit-btn:hover{
+    transition: all .2s ease-in-out;
+    background: #8DC640;
+    border: none;
+}
+  .register-btn{
+    padding: 12px 30px;
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 10px;
+    background-color: #ffffff;
+    text-transform: uppercase;
+    cursor: pointer;
+    width: 100%;
+    display: block;
+    text-align: center;
+}
+
+  .error {
+    color: #ec1c24;
+  }
+
